--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,14 @@ jobs:
     - uses: actions/setup-node@master
       with:
         node-version: 18.16.0
+    - name: Set up Python
+        # This is the version of the action for setting up Python, not the Python version.
+      uses: actions/setup-python@v4
+      with:
+        # Semantic version range syntax or exact version of a Python version
+        python-version: '3.9'
+        # Optional - x64 or x86 architecture, defaults to x64
+        architecture: 'x64'
     - name: install dependencies
       run: npm install
     - name: install electron
