--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vagent",
   "version": "0.0.5",
-  "productName": "AI Agent",
+  "productName": "VAgent",
   "main": "dist-electron/main/index.js",
   "description": "Open AI agent",
   "author": "liuyenhui",
