--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   "dependencies": {
     "@electron-forge/maker-dmg": "^7.2.0",
     "@electron/osx-sign": "^1.0.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.16",
+    "@mui/joy": "^5.0.0-beta.17",
     "@npmcli/fs": "^3.1.0",
     "electron-log": "^5.0.1",
     "electron-squirrel-startup": "^1.0.0",
