--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
+    "@mui/icons-material": "^5.14.19",
     "@mui/joy": "^5.0.0-beta.17",
     "@npmcli/fs": "^3.1.0",
     "electron-log": "^5.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^6.1.1",
+    "i18next": "^23.7.8",
+    "react-i18next": "^13.5.0",
     "update-electron-app": "^3.0.0"
   },
   "devDependencies": {
