zustand store yml file read

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,6 +33,9 @@
         "--remote-debugging-port=9229",
         "."
       ],
+      "env": {
+        "VSCODE_DEBUG": "true",
+      },
       "envFile": "${workspaceFolder}/.vscode/.debug.env",
       "console": "integratedTerminal"
     },
