--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^6.1.1",
     "i18next": "^23.7.8",
+    "js-yaml": "^4.1.0",
     "react-i18next": "^13.5.0",
-    "update-electron-app": "^3.0.0"
+    "update-electron-app": "^3.0.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
@@ -50,6 +52,7 @@
     "@electron-forge/plugin-vite": "^7.2.0",
     "@electron-forge/publisher-github": "^7.2.0",
     "@playwright/test": "^1.37.1",
+    "@types/js-yaml": "^4.0.9",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
@@ -64,6 +67,11 @@
     "vite": "^4.4.9",
     "vite-plugin-electron": "^0.15.3",
     "vite-plugin-electron-renderer": "^0.14.5"
+  },
+  "build": {
+    "extraResources": [
+      "./extraResources/**"
+    ]
   },
   "engines": {
     "node": "^14.18.0 || >=16.0.0"
