--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       ]
     },
   },
-  "include": ["src", "electron","src/**/*.ts,", "src/**/*.d.ts", "src/**/*.tsx"],
+  "include": ["src", "electron"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
